# shmonad

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  prompt.cabal  shmonad.cabal
app/: Main.hs  Prompt.hs  ShMonad.hs
