cabal-version:   3.0
name:            prompt
version:         0.1.0.0
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable prompt
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        async,
        directory,
        process,
        time
