cabal-version:   3.0
name:            prompt
version:         0.1.0.0
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable prompt
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >= 4,
        async,
        directory,
        process,
        time,
        ansi-terminal >= 1,
        filepath >= 1.4,
        xdg-basedir >= 0.2,
        optparse-applicative >= 0.18

library prompt-lib
    exposed-modules:
        Prompt
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >= 4,
        async,
        directory,
        process,
        time,
        ansi-terminal >= 1,
        filepath >= 1.4,
        xdg-basedir >= 0.2,
        optparse-applicative >= 0.18