cabal-version:      3.0
name:               shmonad
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
maintainer:         matthunz2@gmail.com
author:             Matt Hunzinger
synopsis:           Shell prompt
description:        A shell prompt using a Haskell DSL for configuration
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:  ShMonad
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4 && <5,
        async,
        directory,
        process,
        time,
        ansi-terminal >=1 && <2,
        filepath >=1.4 && <2,
        xdg-basedir >=0.2 && <1,
        optparse-applicative >=0.18 && <1

executable shmonad
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        async,
        directory,
        process,
        time,
        ansi-terminal >=1 && <2,
        filepath >=1.4 && <2,
        xdg-basedir >=0.2 && <1,
        optparse-applicative >=0.18 && <1
